# puff

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  justfile  notes.md
.github/workflows/: cargo-publish.yml  ci.yml  github-release.yml  homebrew-update.yml  release.yml  tests.yml  winget-update.yml
demo/: puff-demo.cast  record.sh
scripts/: calculate-version.sh  update-changelog.sh
src/: app_init.rs  cli_args.rs  commands.rs  completions.rs  config.rs  error.rs  fs_utils.rs  git_ignore.rs  io_utils.rs  main.rs  managed_dirs.rs  migration.rs  project_init.rs
src/app_config/: config_file.rs  mod.rs
src/commands/: add_command.rs  cd_command.rs  file_forget_command.rs  file_rm_command.rs  init_command.rs  link_command.rs  list_command.rs  mod.rs  project_forget_command.rs  project_rm_command.rs  rm_command.rs  status_command.rs
src/config/: app_config.rs  locations.rs  mod.rs  projects.rs
src/error/: mod.rs
src/fs_utils/: mod.rs
src/project_init/: existing.rs  fresh.rs  mod.rs
src/secret_files/: mod.rs
src/test_utils/: config.rs
tests/e2e/: add.bats  add_directory.bats  cd.bats  completions.bats  forget_file.bats  forget_project.bats  helpers.bash  init.bats  link.bats  list.bats  migration.bats  status.bats
tests/scripts/: calculate_version.bats  helpers.bash  update_changelog.bats
