[package]
name = "puff"
description = "puff is a CLI tool that manages private configuration/secret files of your dev projects"
version = "0.1.5-alpha.2"
edition = "2021"
authors = ["Marcin Jahn <marcinj10@gmail.com>"]
readme = "README.md"
homepage = "https://marcinjahn.com/projects/puff.html"
repository = "https://github.com/marcinjahn/puff"
license = "Apache-2.0"
keywords = ["configuration", "secret", "management", "environment", "cli"]
categories = ["command-line-utilities", "config", "development-tools", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
directories = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
symlink = "0.1.0"
tempfile = "3"
