[package]
name = "puff"
description = "puff is a CLI tool that manages private configuration/secret files of your dev projects"
version = "0.1.7"
edition = "2024"
authors = ["Marcin Jahn <marcinj10@gmail.com>"]
readme = "README.md"
homepage = "https://marcinjahn.com/projects/puff.html"
repository = "https://github.com/marcinjahn/puff"
license = "Apache-2.0"
keywords = ["configuration", "secret", "management", "environment", "cli"]
categories = ["command-line-utilities", "config", "development-tools", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
tempfile = "3"
