[package]
name = "puff"
description = "puff is a CLI tool that manages private configuration/secret files of your dev projects"
version = "1.1.2"
edition = "2024"
authors = ["Marcin Jahn <marcinj10@gmail.com>"]
readme = "README.md"
homepage = "https://marcinjahn.com/projects/puff.html"
repository = "https://github.com/marcinjahn/puff"
license = "Apache-2.0"
keywords = ["configuration", "secret", "management", "environment", "cli"]
categories = ["command-line-utilities", "config", "development-tools", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "zip"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
directories = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
tempfile = "3"
inquire = "0.9"
